# async-html-rewriter-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench_main.rs
benches/benchmarks/: mod.rs  throughput.rs
src/: context.rs  lib.rs  reader.rs  rewriter.rs  settings.rs  sink.rs  stream.rs
tests/: integration.rs
